# Multiphysics-integrated-computational-project

./: .gitignore  CMakeLists.txt  Kernel_functions.cpp  README.md  basic_time_profiler.py  cube_modified.cpp  generate_particle.cpp  generate_particle.h  gradient.cpp  gradient.h  kernel functions.cpp  main.cpp  simulation.json  sorted_list.cpp  sorted_list.h  test_gen_random.cpp
Misc_python/: Analysis.py  Analysis_surface_tension.py  Euler_Rk22_comparison.py  Plot_OMP.py  Plot_kernel.py  Plot_state_equation.py  Speed_Up_OMP.py  linked_vs_naive.py  test_algo_find_free_surface_particle.py
envs/: windows.cmd
json/: README.md  write_json_2D_Poiseuille.py  write_json_2D_PoiseuilleFlow.py  write_json_2D_adhesion.py  write_json_2D_dam_break.py  write_json_2D_drop_fall.py  write_json_2D_hydrostatic.py  write_json_2D_moving_plate.py  write_json_2D_splash.py  write_json_2D_surface_tension.py  write_json_3D_adhesion.py  write_json_3D_dam_break.py  write_json_3D_hydrostatic.py  write_json_3D_splash.py  write_json_3D_surface_tension.py  write_json_3D_wetting.py  write_json_adhesion.py  write_json_dam_break.py  write_json_hydrostatic.py  write_json_linked_list_comparison.py  write_json_splash.py  write_json_surface_tension.py
lib/: get_zlib.cmd
python/: Analysis.py  Plot_kernel.py  Speed_Up_OMP.py  State_equation.py  coef_adhesion.py  openMP_comparison.py  state_equation.py  test_algo_find_free_surface_particle.py  write_json.py  write_json_adhesion.py  write_json_dam_break.py  write_json_splash.py  write_json_surface_tension.py
src/: Analysis.py  CMakeLists.txt  Kernel.cpp  Kernel.h  Kernel_functions.cpp  Kernel_functions.h  NavierStokes.cpp  NavierStokes.h  Plot_kernel.py  PoiseuilleFlow.cpp  PoiseuilleFlow.h  Visualize_vtp_files.py  data_store.cpp  data_store.h  desktop.ini  export.cpp  find_neighbours.cpp  find_neighbours.h  generate_particle.cpp  generate_particle.h  gradient.cpp  gradient.h  initialize.cpp  initialize.h  integration.cpp  integration.h  main.cpp  main_compare_naive_linked.cpp  simulation.json  sorted_list.cpp  sorted_list.h  structure.cpp  structure.h  surface_tension.cpp  surface_tension.h  time_integration.cpp  tools.cpp  (+2 more)
(+44 files in other folders)
